Fix class generator read and write methods