@@ -1,16 +1,22 @@
 package engine.common.loader.serialization.format;
 
+import engine.common.loader.serialization.SerializationReader;
+import engine.common.loader.serialization.SerializationWriter;
+
 public interface SerializationPojo {
 
 	public static <T extends SerializationPojo> T createPojo(Class<T> pojoClass) {
 		try {
-			return pojoClass.newInstance();
-		} catch (InstantiationException e) {
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
+			return pojoClass.getConstructor().newInstance();
+		} catch (Exception e) {
 			e.printStackTrace();
 		}
 		return null;
 	}
+
+	public abstract void read(SerializationReader reader);
+
+
+	public abstract byte[] toByteArray(SerializationWriter writer);
 
 }
